--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
 }
 
 header {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #fefefe;
+  color: rgb(0, 0, 0);
   text-align: center;
   padding: 20px;
 }
